styled new section

--- a/index.html
+++ b/index.html
@@ -59,34 +59,40 @@
             <!-- About me -->
 
             <section class="about">
-                <div class="about__wrapper container">
-                    <div class="about__img-wrapper">
-                        <img src="img/papin.avif" alt="Papin's photo" class="about__img" />
-                    </div>
-                    <div class="about__description">
-                        <div>
-                            <h2 class="about__title title">Hello, Sa-wat-dee khrap สวัสดีครับ, Thai language lovers!</h2>
-                            <span>I'm Teacher Papin!</span>
+                <div class="container">
+                    <div class="about__wrapper">
+                        <div class="about__wrapper">
+                            <img src="img/papino-main.jpg" alt="Papin's photo" class="about__img" />
                         </div>
+                        <!-- <div class="about__colorful-wrapper">
+                            <div class="about__colorful"></div>
+                        </div> -->
+                        <div class="about__description">
+                            <div class="about__text-wrapper">
+                                <h2 class="second-title title">Hello, Sa-wat-dee khrap สวัสดีครับ, <br />Thai language lovers!</h2>
+                                <span class="about__text-top">I'm content creator and Teacher Papin!</span>
+                            </div>
 
-                        <div>
-                            <span>
-                                My heart lies in sharing the richness of the Thai language with the world, and I'm thrilled to welcome you to my online
-                                classroom!
-                            </span>
-                        </div>
-                        <div>
-                            <span>
-                                What I Teach: I offer one-on-one online classes to teach you basic Thai conversation. No fuss, just easy and practical learning.
-                            </span>
-                        </div>
-                        <div class="about__text-block">
-                            <span>I've seen many people striving to learn Thai, and I understand the challenges that come with it.</span>
-                            <span> That's why I've developed my own teaching method to make learning Thai easier and more effective.</span>
-                            <span>
-                                My lessons will help you master the language through practical and simple techniques, allowing you to speak confidently and
-                                enjoy the learning process.
-                            </span>
+                            <div class="about__text-block">
+                                <span class="about__text">
+                                    My heart lies in sharing the richness of the Thai language with the world, and I'm thrilled to welcome you to my online
+                                    classroom!
+                                </span>
+
+                                <span class="about__text">
+                                    What I Teach: I offer one-on-one online classes to teach you basic Thai conversation. No fuss, just easy and practical
+                                    learning.
+                                </span>
+
+                                <span class="about__text">I've seen many people striving to learn Thai and I understand the challenges that come with it.</span>
+                                <span class="about__text"
+                                    >That's why I've developed my own teaching method to make learning Thai easier and more effective.</span
+                                >
+                                <span class="about__text">
+                                    My lessons will help you master the language through practical and simple techniques, allowing you to speak confidently and
+                                    enjoy the learning process.
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -108,22 +114,67 @@
                         </div>
                         <div class="statistics__item">
                             <div><span class="statistics__number increase-number" data-target="20">0</span><span class="statistics__number">+</span></div>
-                            <span class="statistics__text-statistic">countries my Students Come From</span>
+                            <span class="statistics__text-statistic">countries my students come from</span>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <!-- Content creator -->
-
-            <section>
-                <div class="container">Follow for more!</div>
-                <!-- video from IG -->
-            </section>
-
             <!-- Scroll -->
 
-            <section>
+            <section class="adventure">
+                <div class="container">
+                    <h2 class="second-title">Unforgettable adventure</h2>
+                    <div class="adventure__text-top">
+                        <p class="adventure__text">
+                            Discover Thailand with a new level of confidence! Dreaming of traveling to Thailand but worried about the language barrier? With my
+                            Thai lessons, your trip will become easier and more exciting!
+                        </p>
+                        <div class="adventure__text-list">
+                            <div class="adventure__wrap1">
+                                <span class="adventure__text-item">
+                                    🌴 Explore incredible places — from the bustling streets of Bangkok to the paradise beaches of Phuket and Samui, as well as
+                                    the ancient temples of Chiang Mai and Chiang Rai in the north.
+                                </span>
+                            </div>
+
+                            <div class="adventure__wrap">
+                                <img src="img/bangkok.jpg" alt="Photo of Bangkok" class="adventure__img" />
+                            </div>
+                            <div class="adventure__wrap">
+                                <img src="img/island.jpg" alt="Photo of island" class="adventure__img" />
+                            </div>
+
+                            <div class="adventure__wrap">
+                                <img src="img/chiang-mai.jpg" alt="Photo of Chiang Mai" class="adventure__img" />
+                            </div>
+                            <div class="adventure__wrap1">
+                                <span class="adventure__text-item">
+                                    🍜 Enjoy authentic Thai cuisine — order food at local markets without fear of making a mistake.
+                                </span>
+                            </div>
+
+                            <div class="adventure__wrap">
+                                <img src="img/fruit.jpg" alt="Photo of fruit" class="adventure__img" />
+                            </div>
+
+                            <div class="adventure__wrap">
+                                <img src="img/night-market.jpg" alt="Photo of night market" class="adventure__img" />
+                            </div>
+                            <div class="adventure__wrap">
+                                <img src="img/city.jpg" alt="Photo of city" class="adventure__img" />
+                            </div>
+                            <div class="adventure__wrap1">
+                                <span class="adventure__text-item">
+                                    🛕 Immerse yourself in the culture — communicate with locals, learn about Thai traditions, and discover new horizons!
+                                </span>
+                            </div>
+                        </div>
+                        <p class="adventure__text">
+                            Knowing the language turns your trip to Thailand into a real adventure! Start learning Thai today and feel the difference!
+                        </p>
+                    </div>
+                </div>
                 <div class="feature-grid">
                     <div class="row">
                         <div class="card"></div>
@@ -205,6 +256,13 @@
                 </div>
             </section>
 
+            <!-- Content creator -->
+
+            <section>
+                <div class="container">Follow for more!</div>
+                <!-- video from IG -->
+            </section>
+
             <!-- Section with photo from IG with students -->
 
             <section>
@@ -243,7 +301,7 @@
                     <div class="lessons__slider slick-slider">
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/introduction.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Greetings & introductions</p>
@@ -255,7 +313,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/market.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Speak Thai at the market</p>
@@ -265,7 +323,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/restaurant.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Speak Thai at the restaurant</p>
@@ -277,7 +335,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/direction.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Asking the direction</p>
@@ -289,7 +347,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/number.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Get to know Thai Number</p>
@@ -301,7 +359,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/food-flavors.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Food and Flavors</p>
@@ -313,7 +371,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/time.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Telling the Time</p>
@@ -325,7 +383,7 @@
 
                         <div class="lessons__slide slick-slide">
                             <div class="lessons__content">
-                                <div class="lessons__img-wrap">
+                                <div class="lessons__wrap">
                                     <img src="img/days.jpg" class="lessons__img" alt="Basic Thai" />
                                 </div>
                                 <p class="lessons__author">Days of the week</p>
